fixed meta tags issues

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta property="og:title" content="Portfolio Template">
-  <meta property="og:image" content="https://freeimage.host/i/dKQS72V">
+  <meta property="og:image" content="https://postimg.cc/MXZxDP9W">
   <meta property="og:site_name" content="https://react-portfolio-template-nine.vercel.app/">
-  <meta property="description" content="Portfolio Template built using React and tailwind css." />
+  <meta property="og:description" content="Portfolio Template built using React and tailwind css." />
+
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:image" content="https://postimg.cc/MXZxDP9W">
+  <meta name="twitter:site" content="@devgancode" />
+  <meta name="twitter:title" content="My Awesome React Portfolio" />
+  <meta name="twitter:description" content="A developer showcasing skills in React, Tailwind CSS and more!" />
+
 
   <!-- stylesheet links-->
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
