fixed meta image tag

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta property="og:title" content="Portfolio Template">
-  <meta property="og:image" content="https://postimg.cc/MXZxDP9W">
+  <meta property="og:image" content="https://i.ibb.co/0nWyp1z/canva.png">
   <meta property="og:site_name" content="https://react-portfolio-template-nine.vercel.app/">
   <meta property="og:description" content="Portfolio Template built using React and tailwind css." />
 
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:image" content="https://postimg.cc/MXZxDP9W">
+  <meta property="twitter:image" content="https://i.ibb.co/0nWyp1z/canva.png">
   <meta name="twitter:site" content="@devgancode" />
   <meta name="twitter:title" content="My Awesome React Portfolio" />
   <meta name="twitter:description" content="A developer showcasing skills in React, Tailwind CSS and more!" />
